# vitadex

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
config/: autonomy-levels.yaml  codex-harness.yaml  cost-policy.yaml  default.yaml  permissions.yaml  skills.yaml  tools.yaml
dashboard-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard-web/src/: App.test.tsx  App.tsx  index.css  types.ts
docs/: architecture.md  asset-tracking.md  codex-local-workflow.md  demo.md  feedback.md  future-openclaw-integration.md  glossary.md  local-setup.md  post-publish-checklist.md
examples/: README.md
examples/approvals/: munich-housing-email-approval.yaml
examples/assets/: domain-portfolio.yaml
examples/followups/: munich-housing-followups.yaml
examples/outputs/: munich-housing-recommendation-template.md  munich-housing-shortlist-template.md
examples/plans/: munich-housing-6-months-plan.yaml
examples/tasks/: munich-housing-6-months.yaml
private_os/: __init__.py  cli.py  constitution.py
private_os/core/: __init__.py  config.py  db.py  logging.py
private_os/costs/: __init__.py  budget.py  estimator.py  optimizer.py  policy.py  usage_log.py
private_os/models/: action.py  approval.py  followup.py  log.py  memory.py  plan.py  skill.py  task.py
private_os/panels/: __init__.py  approval_panel.py  base.py  dashboard_panel.py  decision_panel.py  followup_panel.py  list_panel.py  memory_panel.py  notes_panel.py  renderer.py  task_panel.py
private_os/permissions/: __init__.py  evaluator.py  policy.py
private_os/renderers/: __init__.py  tables.py
private_os/services/: __init__.py  action_gateway.py  agent_intake_service.py  approval_service.py  audit_service.py  dashboard_service.py  followup_service.py  memory_service.py  panel_service.py  planning_service.py  skill_service.py  task_service.py
private_os/skills/: __init__.py  appointment_booking.py  base.py  complaint_management.py  dashboard_digest.py  decision_matrix.py  document_request.py  email_followup.py  exporter.py  housing_search.py  manifest.py  purchase_research.py  quote_request.py  travel_planning.py  validator.py
private_os/tools/: __init__.py  base.py  browser.py  calendar.py  drive.py  filesystem.py  gmail.py  telegram.py
private_os/web/: __init__.py  app.py  read_model.py  stream.py
scripts/: bootstrap-local.sh
templates/emails/: appointment-request-en.md  appointment-request-it.md  complaint-neutral-en.md  complaint-neutral-it.md  document-request-en.md  document-request-it.md  followup-en.md  followup-it.md  housing-request-en.md  housing-request-it.md  quote-request-en.md  (+1 more)
tests/: conftest.py  test_action_gateway.py  test_agent_intake.py  test_approval_queue.py  test_asset_reconciliation_skill.py  test_asset_service.py  test_cli_commands.py  test_codex_harness.py  test_constitution.py  test_costs.py  test_dashboard.py  test_dual_memory.py  test_followups.py  test_logging.py  test_memory_service.py  test_panels.py  test_permissions.py  test_planning_service.py  test_skill_export.py  test_skill_matching.py  test_task_service.py  test_web_api.py
vitadex/: __init__.py  cli.py  constitution.py
workflows/: appointment-booking.md  asset-reconciliation.md  complaint-management.md  dashboard-digest.md  decision-matrix.md  document-request.md  email-followup.md  housing-search.md  purchase-research.md  quote-request.md  travel-planning.md
(+124 files in other folders)
