[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-os"
version = "0.1.0"
description = "Private, local-first personal agentic operating system."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn>=0.30,<1",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
private-os = "private_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["private_os"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
