[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-os"
version = "0.1.0"
description = "Private, local-first personal agentic operating system."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "private-os contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn>=0.30,<1",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
private-os = "private_os.cli:app"

[project.urls]
Homepage = "https://github.com/DavideZanonArt/private-os-public"
Repository = "https://github.com/DavideZanonArt/private-os-public"
Issues = "https://github.com/DavideZanonArt/private-os-public/issues"

[tool.hatch.build.targets.wheel]
packages = ["private_os"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
