[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitadex"
version = "0.1.0"
description = "Your personal life folder, powered by Codex. Memory, tasks, workflows, approvals and follow-ups in one local repo."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "VitaDex contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn>=0.30,<1",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
vitadex = "vitadex.cli:app"

[project.urls]
Homepage = "https://github.com/DavideZanonArt/vitadex"
Repository = "https://github.com/DavideZanonArt/vitadex"
Issues = "https://github.com/DavideZanonArt/vitadex/issues"

[tool.hatch.build.targets.wheel]
packages = ["vitadex"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
